telecom-bretagne/javacompiler/SecondPhase/tests/Good/TestDupMethod.java
package tests;

public abstract class A {

	public A() {
	}

	abstract void mmm(int x);
	void m2(int x){}
	
	void m2(int x[]){}
	
	void m2(String x[]){}
	
	public static void main(String[] args) {
		// TODO Auto-generated method stub

	}

}
