telecom-bretagne/javacompiler/SecondPhase/tests/Fail/TestReturnMethodFail.java
package tests;

class A {

	
	String a(String l[]) {
		if(true){
			int a = 1;
		}else {
			return 3;
		}
	}
	

}

